garage/manifests/garage-prod.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage
  namespace: garage
  labels:
    app: garage
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: garage
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: garage
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: garage
        image: dxflrs/garage:v2.4.1
        imagePullPolicy: IfNotPresent
        command: ["/garage", "server"]
        args: ["--single-node", "--default-bucket"]
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - name: s3-api
          containerPort: 3900
        - name: rpc
          containerPort: 3901
        - name: admin-api
          containerPort: 3903
        volumeMounts:
        - name: garage-config
          mountPath: /etc/garage.toml
          subPath: garage.toml
        - name: garage-meta
          mountPath: /var/lib/garage/meta
        - name: garage-data
          mountPath: /var/lib/garage/data
      volumes:
      - name: garage-config
        configMap:
          name: garage-config
      - name: garage-meta
        hostPath:
          path: /mnt/k3s-prod-data/garage/meta
      - name: garage-data
        hostPath:
          path: /mnt/k3s-prod-data/garage/data

---
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: garage
spec:
  selector:
    app: garage
  type: ClusterIP
  ports:
  - name: s3-api
    port: 3900
    targetPort: 3900
  - name: rpc
    port: 3901
    targetPort: 3901
  - name: admin-api
    port: 3903
    targetPort: 3903

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-s3-api-ingress
  namespace: garage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`garage-s3-prod.goepp.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: garage
          port: 3900

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-admin-ingress
  namespace: garage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`garage-admin-prod.goepp.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: garage
          port: 3903
